--- a/estilo/all.css
+++ b/estilo/all.css
@@ -378,7 +378,7 @@ body h4 {
   box-sizing: border-box;
 }
 #home img {
-  padding: 50px 50px 0px 50px;
+  padding: 50px 0px 0px 0px;
   height: auto;
   width: 80vw;
 }
@@ -446,16 +446,23 @@ body h4 {
 
 @media (min-width: 992px) {
   #home {
+    display: flex;
     flex-direction: row-reverse;
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-top: 80px;
+    margin-bottom: 90px;
+    padding-right: 80px;
   }
   #home img {
+    margin: 0;
     width: 40vw;
     align-self: center;
   }
   #home .textoybotones {
     flex-direction: column;
+    width: 465px;
+    margin: 0px;
   }
   #home .textoybotones h1 {
     text-align: left;
