--- a/estilo/all.css
+++ b/estilo/all.css
@@ -26,11 +26,7 @@ body a {
   flex-direction: column;
   background: #ecf5ff;
   width: 100vw;
-<<<<<<< HEAD
   height: auto;
-=======
-  height: 1500px;
->>>>>>> dadf7f679eda15038bba7c97a6b4d51ba5da7294
 }
 #services .sub04 {
   text-align: center;
@@ -87,247 +83,23 @@ body a {
   margin-left: 50px;
   line-height: 1.6;
 }
-#services .t01 .t01sub .iconify {
-  color: red;
+#services .t01 .t01sub span {
+  color: black;
   font-size: 400%;
   position: absolute;
   left: -23px;
+}
+#services .t01 .t01sub .iconify1 {
+  color: red;
+}
+#services .t01 .t01sub .iconify2 {
+  color: blue;
 }
 #services .t01:hover {
   cursor: text;
   transform: translateY(-5px);
 }
 #services .t01:hover h1 {
-  color: #007bff;
-}
-#services .t02 {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-  padding: 10px 40px 10px 0px;
-  text-align: left;
-  background: white;
-  border-radius: 15px;
-  width: 70vw;
-  position: relative;
-  overflow: hidden;
-  transition: all 0.3s ease-out;
-  margin-bottom: 40px;
-}
-#services .t02 h1 {
-  font-family: "Montserrat", sans-serif;
-  flex-direction: column;
-  font-size: 130%;
-  margin-left: 50px;
-  transition: all 0.5s ease-out;
-  margin-bottom: 5px;
-}
-#services .t02 .t02sub {
-  display: flex;
-  flex-direction: row;
-}
-#services .t02 .t02sub h2 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-size: 90%;
-  margin-left: 50px;
-  line-height: 1.6;
-}
-#services .t02 .t02sub .iconify {
-  color: #ffc107;
-  font-size: 400%;
-  position: absolute;
-  left: -23px;
-}
-#services .t02:hover {
-  cursor: text;
-  transform: translateY(-5px);
-}
-#services .t02:hover h1 {
-  color: #007bff;
-}
-#services .t03 {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-  padding: 10px 40px 10px 0px;
-  text-align: left;
-  background: white;
-  border-radius: 15px;
-  width: 70vw;
-  position: relative;
-  overflow: hidden;
-  transition: all 0.3s ease-out;
-  margin-bottom: 40px;
-}
-#services .t03 h1 {
-  font-family: "Montserrat", sans-serif;
-  flex-direction: column;
-  font-size: 130%;
-  margin-left: 50px;
-  transition: all 0.5s ease-out;
-  margin-bottom: 5px;
-}
-#services .t03 .t03sub {
-  display: flex;
-  flex-direction: row;
-}
-#services .t03 .t03sub h2 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-size: 90%;
-  margin-left: 50px;
-  line-height: 1.6;
-}
-#services .t03 .t03sub .iconify {
-  color: #20c997;
-  font-size: 400%;
-  position: absolute;
-  left: -23px;
-}
-#services .t03:hover {
-  cursor: text;
-  transform: translateY(-5px);
-}
-#services .t03:hover h1 {
-  color: #007bff;
-}
-#services .t04 {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-  padding: 10px 40px 10px 0px;
-  text-align: left;
-  background: white;
-  border-radius: 15px;
-  width: 70vw;
-  position: relative;
-  overflow: hidden;
-  transition: all 0.3s ease-out;
-  margin-bottom: 40px;
-}
-#services .t04 h1 {
-  font-family: "Montserrat", sans-serif;
-  flex-direction: column;
-  font-size: 130%;
-  margin-left: 50px;
-  transition: all 0.5s ease-out;
-  margin-bottom: 5px;
-}
-#services .t04 .t04sub {
-  display: flex;
-  flex-direction: row;
-}
-#services .t04 .t04sub h2 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-size: 90%;
-  margin-left: 50px;
-  line-height: 1.6;
-}
-#services .t04 .t04sub .iconify {
-  color: #28a745;
-  font-size: 400%;
-  position: absolute;
-  left: -23px;
-}
-#services .t04:hover {
-  cursor: text;
-  transform: translateY(-5px);
-}
-#services .t04:hover h1 {
-  color: #007bff;
-}
-#services .t05 {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-  padding: 10px 40px 10px 0px;
-  text-align: left;
-  background: white;
-  border-radius: 15px;
-  width: 70vw;
-  position: relative;
-  overflow: hidden;
-  transition: all 0.3s ease-out;
-  margin-bottom: 40px;
-}
-#services .t05 h1 {
-  font-family: "Montserrat", sans-serif;
-  flex-direction: column;
-  font-size: 130%;
-  margin-left: 50px;
-  transition: all 0.5s ease-out;
-  margin-bottom: 5px;
-}
-#services .t05 .t05sub {
-  display: flex;
-  flex-direction: row;
-}
-#services .t05 .t05sub h2 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-size: 90%;
-  margin-left: 50px;
-  line-height: 1.6;
-}
-#services .t05 .t05sub .iconify {
-  color: #cdff45;
-  font-size: 400%;
-  position: absolute;
-  left: -23px;
-}
-#services .t05:hover {
-  cursor: text;
-  transform: translateY(-5px);
-}
-#services .t05:hover h1 {
-  color: #007bff;
-}
-#services .t06 {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
-  padding: 10px 40px 10px 0px;
-  text-align: left;
-  background: white;
-  border-radius: 15px;
-  width: 70vw;
-  position: relative;
-  overflow: hidden;
-  transition: all 0.3s ease-out;
-  margin-bottom: 40px;
-}
-#services .t06 h1 {
-  font-family: "Montserrat", sans-serif;
-  flex-direction: column;
-  font-size: 130%;
-  margin-left: 50px;
-  transition: all 0.5s ease-out;
-  margin-bottom: 5px;
-}
-#services .t06 .t06sub {
-  display: flex;
-  flex-direction: row;
-}
-#services .t06 .t06sub h2 {
-  font-family: "Open Sans", sans-serif;
-  font-weight: 400;
-  font-size: 90%;
-  margin-left: 50px;
-  line-height: 1.6;
-}
-#services .t06 .t06sub .iconify {
-  color: blue;
-  font-size: 400%;
-  position: absolute;
-  left: -23px;
-}
-#services .t06:hover {
-  cursor: text;
-  transform: translateY(-5px);
-}
-#services .t06:hover h1 {
   color: #007bff;
 }
 
