--- a/sass/sections/_services04.scss
+++ b/sass/sections/_services04.scss
@@ -78,3 +78,16 @@
     }
 }
     
+@include desktop {
+    #services{
+        .cards{
+            display:flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        
+            .card{
+                width: 30vw;
+            }
+        }
+    }
+}
