--- a/sass/sections/_team06.scss
+++ b/sass/sections/_team06.scss
@@ -29,243 +29,35 @@
 
         }
     }
-    .card01{
-        border-radius: 50%;
-        width: 330px;
-        height: 330px;
-        background: url("../imagenes/team-01.jpg");
-        margin:auto;
-        transition: 0.5s ease-in;
-        position: relative;
-        &:hover .text{
-            transform: translateY(-15px);
-            opacity:1;
-        }
-        .fondoazul{
-            background: $fondo;
-            border-radius: 50%;
-            width: 330px;
-            height: 330px;
-            margin:auto;
-            transition: 0.2s ease-in;
-            opacity:0;
-            &:hover{
-                opacity:0.6;
-            }
-        }
-        .text{
-            color:white;
-            position:absolute;
-            top: 130px;
-            left:115px;
-            opacity:0;
-            transition:0.2s ease-in;    
-            text-align: center;
-                h1{
-                    font-size: 110%;
-                    margin:auto; 
-                }
-                h2{
-                    font-weight: 400;
-                    font-size: 70%;
-                }
-            .tredes{
-                padding-top:5px;
-                text-align: center;
-                i{
-                    &:hover{
-                        color:$acentos;
-                        cursor:pointer;
-                        opacity: 1;
-                    }
-                }
-            }
-            
-        }
-    }
-    .card02{
-        border-radius: 50%;
-        width: 330px;
-        height: 330px;
-        background: url("../imagenes/team-02.jpg");
-        margin:15px auto 0px auto;
-        transition: 0.5s ease-in;
-        position: relative;
-        &:hover .text{
-            transform: translateY(-15px);
-            opacity:1;
-        }
-        .fondoazul{
-            background: $fondo;
-            border-radius: 50%;
-            width: 330px;
-            height: 330px;
-            margin:auto;
-            transition: 0.2s ease-in;
-            opacity:0;
-            &:hover{
-                opacity:0.6;
-            }
-        }
-        .text{
-            color:white;
-            position:absolute;
-            top: 130px;
-            left:115px;
-            opacity:0;
-            transition:0.2s ease-in;    
-            text-align: center;
-                h1{
-                    font-size: 110%;
-                    margin:auto; 
-                }
-                h2{
-                    font-weight: 400;
-                    font-size: 70%;
-                }
-            .tredes{
-                padding-top:5px;
-                text-align: center;
-                i{
-                    &:hover{
-                        color:$acentos;
-                        cursor:pointer;
-                        opacity: 1;
-                    }
-                }
-            }
-            
-        }
-    }
-
-    .card03{
-        border-radius: 50%;
-        width: 330px;
-        height: 330px;
-        background: url("../imagenes/team-03.jpg");
-        margin:15px auto 0px auto;
-        transition: 0.5s ease-in;
-        position: relative;
-        &:hover .text{
-            transform: translateY(-15px);
-            opacity:1;
-        }
-        .fondoazul{
-            background: $fondo;
-            border-radius: 50%;
-            width: 330px;
-            height: 330px;
-            margin:auto;
-            transition: 0.2s ease-in;
-            opacity:0;
-            &:hover{
-                opacity:0.6;
-            }
-        }
-        .text{
-            color:white;
-            position:absolute;
-            top: 130px;
-            left:115px;
-            opacity:0;
-            transition:0.2s ease-in;    
-            text-align: center;
-                h1{
-                    font-size: 110%;
-                    margin:auto; 
-                }
-                h2{
-                    font-weight: 400;
-                    font-size: 70%;
-                }
-            .tredes{
-                padding-top:5px;
-                text-align: center;
-                i{
-                    &:hover{
-                        color:$acentos;
-                        cursor:pointer;
-                        opacity: 1;
-                    }
-                }
-            }
-            
-        }
-    }
-
-    .card04{
-        border-radius: 50%;
-        width: 330px;
-        height: 330px;
-        background: url("../imagenes/team-04.jpg");
-        margin:15px auto 0px auto;
-        transition: 0.5s ease-in;
-        position: relative;
-        &:hover .text{
-            transform: translateY(-15px);
-            opacity:1;
-        }
-        .fondoazul{
-            background: $fondo;
-            border-radius: 50%;
-            width: 330px;
-            height: 330px;
-            margin:auto;
-            transition: 0.2s ease-in;
-            opacity:0;
-            &:hover{
-                opacity:0.6;
-            }
-        }
-        .text{
-            color:white;
-            position:absolute;
-            top: 130px;
-            left:115px;
-            opacity:0;
-            transition:0.2s ease-in;    
-            text-align: center;
-                h1{
-                    font-size: 110%;
-                    margin:auto; 
-                }
-                h2{
-                    font-weight: 400;
-                    font-size: 70%;
-                }
-            .tredes{
-                padding-top:5px;
-                text-align: center;
-                i{
-                    &:hover{
-                        color:$acentos;
-                        cursor:pointer;
-                        opacity: 1;
-                    }
-                }
-            }
-        }
-    }
-}
-
-@include desktop {
-    #team{
+    .card{
         
-        .cards{
-            width: auto;
-            display:flex;
-            flex-direction: row;
-            transform: scale(0.6);
-            justify-content: space-around;
-            .text{
-                font-size: 30px;
-                left:59px;
-                top:101px;
+       .persona{
+           img{
+               width: 73%;
+               border-radius:50%;
+               position:relative;
+           }
+           .nombre{
+               h1{
+                   font-size: 18px;
+               }
+               h2{
+                   font-size: 15px;
+               }
+               .iconos{
+                   
+               }
             }
-
-            
-            
-        }
+             
+           .hoverazul{
+               background:blue;
+               width:100px;
+               height: 100px;
+               border-radius: 50%;
+           }
+       }
         
+    
+       
     }
-}
+}  
