--- a/sass/sections/_team06.scss
+++ b/sass/sections/_team06.scss
@@ -16,7 +16,7 @@
             text-align: center;
             margin:5px;
             color: $subtitulo;
-            font-weight: 400;
+            font-weight: 400; 
             
         }
         h2{
@@ -29,35 +29,110 @@
 
         }
     }
+
     .card{
-        
-       .persona{
-           img{
-               width: 73%;
-               border-radius:50%;
-               position:relative;
-           }
-           .nombre{
-               h1{
-                   font-size: 18px;
-               }
-               h2{
-                   font-size: 15px;
-               }
-               .iconos{
-                   
-               }
+        border-radius: 50%;
+        width: 330px;
+        height: 330px;
+        margin:auto;
+        margin-bottom: 20px;
+        transition: 0.5s ease-in;
+        position: relative;
+
+        &:hover .text{
+            transform: translateY(-15px);
+            opacity:1;
+        }
+
+        .fondoazul{
+            background: $fondo;
+            border-radius: 50%;
+            width: 330px;
+            height: 330px;
+            margin:auto;
+            transition: 0.2s ease-in;
+            opacity:0;
+
+            &:hover{
+                opacity:0.6;
             }
-             
-           .hoverazul{
-               background:blue;
-               width:100px;
-               height: 100px;
-               border-radius: 50%;
-           }
-       }
-        
-    
-       
+        }
+
+        .text{
+            color:white;
+            position:absolute;
+            top: 130px;
+            left:115px;
+            opacity:0;
+            transition:0.2s ease-in;    
+            text-align: center;
+                h1{
+                    font-size: 110%;
+                    margin:auto; 
+                }
+                h2{
+                    font-weight: 400;
+                    font-size: 70%;
+                }
+            .tredes{
+                padding-top:5px;
+                text-align: center;
+                i{
+                    &:hover{
+                        color:$acentos;
+                        cursor:pointer;
+                        opacity: 1;
+                    }
+                }
+            }
+
+
+        }
     }
-}  
+    
+    .uno  {
+        background: url("../imagenes/team-01.jpg");
+
+    }
+
+    .dos {
+        background: url("../imagenes/team-02.jpg");
+
+    }
+
+    .tres {
+        background: url("../imagenes/team-03.jpg");
+ 
+    }
+
+    .cuatro {
+        background: url("../imagenes/team-04.jpg");
+
+    }
+
+
+
+
+}
+
+@include desktop {
+    #team{
+        
+        .cards{
+            width: auto;
+            display:flex;
+            flex-direction: row;
+            transform: scale(0.6);
+            justify-content: space-around;
+            .text{
+                font-size: 30px;
+                left:59px;
+                top:101px;
+            }
+
+            
+            
+        }
+        
+    }
+}
