--- a/estilo/all.css
+++ b/estilo/all.css
@@ -792,9 +792,6 @@ body h4 {
   width: 100%;
   padding-right: 0px;
   padding-left: 0px;
-  margin-right: auto;
-  margin-left: auto;
-  max-width: 1140px;
   box-sizing: border-box;
   background: white;
 }
@@ -883,11 +880,11 @@ body h4 {
 
 @media (min-width: 992px) {
   #team .cards {
-    width: auto;
+    width: 255px;
     display: flex;
     flex-direction: row;
     transform: scale(0.6);
-    justify-content: space-around;
+    align-content: center;
   }
   #team .cards .text {
     font-size: 30px;
